6.2.x/mfa/GoogleAuthenticator-Authentication.md
---
layout: default
title: CAS - Google Authenticator Authentication
category: Multifactor Authentication
---

# Google Authenticator Authentication

Google Authenticator generates 2-step verification codes on your phone. With 2-step verification signing in will require a code generated by the Google Authenticator app in addition to primary authentication. Learn more about the topic [here](https://en.wikipedia.org/wiki/Google_Authenticator).

Note that the functionality presented here should also be compatible with the likes of [LastPass Authenticator](https://lastpass.com/auth), etc.

## Configuration

Support is enabled by including the following module in the overlay:

```xml
<dependency>
     <groupId>org.apereo.cas</groupId>
     <artifactId>cas-server-support-gauth</artifactId>
     <version>${cas.version}</version>
</dependency>
```

To see the relevant list of CAS properties, please [review this guide](../configuration/Configuration-Properties.html#google-authenticator).

## Administrative Endpoints

The following endpoints are provided by CAS:
 
| Endpoint                 | Description
|--------------------------|------------------------------------------------
| `gauthCredentialRepository`   | Manage and control [Google Authenticator account records](GoogleAuthenticator-Authentication.html). A `GET` operation produces a list of all account records. A `DELETE` operation will delete all account records. A `GET` operation produces with a parameter selector of `/{username}` will list the record assigned to the user. A `DELETE` operation produces with a parameter selector of `/{username}` will remove the record assigned to the user.

## Token Repository

In order to prevent reuse of tokens issued, CAS will attempt to keep track of tokens that are successfully used to authenticate the user.
The repository that holds registration records and tokens is periodically scanned and cleaned up so that expired and previously used tokens
may be removed.

## Registration

By default, an account registry implementation is included that collects user device registrations and saves them into memory.
Issued tokens are also captured into a self-cleaning cache to prevent token reuse for a configurable period of time.
This option should only be used for demo and testing purposes. Production deployments of this feature will require a separate
implementation of the registry that is capable to register accounts into persistent storage.

### JPA

Registration records and tokens may be kept inside a database instance via the following module:

```xml
<dependency>
     <groupId>org.apereo.cas</groupId>
     <artifactId>cas-server-support-gauth-jpa</artifactId>
     <version>${cas.version}</version>
</dependency>
```

To learn how to configure database drivers, [please see this guide](../installation/JDBC-Drivers.html).
To see the relevant list of CAS properties, please [review this guide](../configuration/Configuration-Properties.html#google-authenticator-jpa).

#### MySQL / Galera Limitations

Registration records and tokens keps inside a MySQL database backd by a [Galera cluster](http://galeracluster.com) might produce the following error when running CAS for the first time: `This table type requires a primary key`.

This is due to the fact that Galera needs primary keys on all tables (Galera setting `innodb_force_primary_key = 1`). [See Galera known limitations](https://mariadb.com/kb/en/mariadb/mariadb-galera-cluster-known-limitations/), but the `hibernate_sequence` table does not define a primary key (See [HHH-11923](https://hibernate.atlassian.net/browse/HHH-11923)).

To workaround this issue, you can either:

1. Create a custom `hibernate_sequence` table manually with a primary key id column in your Galera cluster:

```sql
CREATE TABLE `hibernate_sequence` (
  `id` bigint(20) NOT NULL AUTO_INCREMENT,
  `next_val` bigint(20) DEFAULT NULL,
  PRIMARY KEY (`id`)
) ENGINE=InnoDB;
```

2. Define your own `OneTimeToken` and `OneTimeTokenAccount` classes in your overlay project and in both classes, annotate the id column with a `@SequenceGenerator` definition holding a primary key:

```java
  @Id
  @GeneratedValue(strategy = GenerationType.TABLE, generator="ticket_sequence")
  @javax.persistence.TableGenerator (name="ticket_sequence", 
                                     table="ticket_sequence", 
                                     pkColumnName = "gen_name", 
                                     valueColumnName = "next_val", 
                                     pkColumnValue="gen_name", 
                                     allocationSize=100)
  private long id = Integer.MAX_VALUE;
```

### CouchDb

Registration records and tokens may be kept inside a CouchDb instance, via the following module:

```xml
<dependency>
     <groupId>org.apereo.cas</groupId>
     <artifactId>cas-server-support-gauth-couchdb</artifactId>
     <version>${cas.version}</version>
</dependency>
```

To see the relevant list of CAS properties, please [review this guide](../configuration/Configuration-Properties.html#google-authenticator-couchdb).

### MongoDb

Registration records and tokens may be kept inside a MongoDb instance, via the following module:

```xml
<dependency>
     <groupId>org.apereo.cas</groupId>
     <artifactId>cas-server-support-gauth-mongo</artifactId>
     <version>${cas.version}</version>
</dependency>
```

To see the relevant list of CAS properties, please [review this guide](../configuration/Configuration-Properties.html#google-authenticator-mongodb).

### Redis

Registration records and tokens may be kept inside a Redis instance via the following module:

```xml
<dependency>
     <groupId>org.apereo.cas</groupId>
     <artifactId>cas-server-support-gauth-redis</artifactId>
     <version>${cas.version}</version>
</dependency>
```

To see the relevant list of CAS properties, please [review this guide](../configuration/Configuration-Properties.html#google-authenticator-redis).

### LDAP

Registration records may be kept inside LDAP/AD systems via the following module:

```xml
<dependency>
     <groupId>org.apereo.cas</groupId>
     <artifactId>cas-server-support-gauth-ldap</artifactId>
     <version>${cas.version}</version>
</dependency>
```

Account registration records are kept inside a designated configurable multi-valued attribute as JSON blobs. The attribute values are parsed
to load, save, update or delete accounts. The content of each attribute value can be signed/encrypted if necessary. 

To see the relevant list of CAS properties, please [review this guide](../configuration/Configuration-Properties.html#google-authenticator-ldap).

### REST

Registration records may also be passed along to a REST endpoint.
The behavior is only activated when an endpoint url is provided.

| Method    | Headers             | Expected Response     | Behavior
|-----------|------------------------------------------------------------------------------------
| `GET`     | `username`          | `200`. Account record in the body for the user. | Fetch user record
| `GET`     | N/A                 | `200`. Account records currently registered. | Fetch all records
| `DELETE`  | N/A                 | `200`. | Delete all records.
| `DELETE`  | `username`          | `200`. Count deleted records. | Delete all records assigned to user
| `POST`    | `username`, `validationCode`, `secretKey`, `scratchCodes` | `200`. `true/false` in the body. | Save user record

The following endpoints need also be available:

| Method    | Endpoint   | Headers           | Expected Response     | Behavior
|-----------|------------------------------------------------------------------------------------
| `GET`     | `count`    | N/A             | `200`. Numeric count | Count all user records

To see the relevant list of CAS properties, please [review this guide](../configuration/Configuration-Properties.html#google-authenticator-rest).

### JSON

Registration records may also be kept inside a single JSON file for all users.
The behavior is only activated when a path to a JSON data store file is provided,
and otherwise CAS may fallback to keeping records in memory. This feature is mostly
useful during development and for demo purposes.

To see the relevant list of CAS properties, please [review this guide](../configuration/Configuration-Properties.html#google-authenticator-json).

## REST Protocol Credential Extraction 

In the event that the [CAS REST Protocol](../protocol/REST-Protocol.html) is turned on, a special credential extractor is injected into the REST authentication engine in order to recognize YubiKey credentials and authenticate them as part of the REST request. The expected parameter name in the request body is `gauthotp`.
